--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -31,7 +31,19 @@ header:hover {
     font-size: 28px;
     font-weight: bold;
 }
+.heart-animation {
+    font-size: 3rem;
+    animation: float 2s infinite;
+}
 
+@keyframes float {
+    0%, 100% {
+        transform: translateY(0);
+    }
+    50% {
+        transform: translateY(-10px);
+    }
+}
 .nav-links {
     display: none;
     flex-direction: column;
@@ -174,6 +186,9 @@ footer p {
     align-items: center;
     justify-content: center;
     color: #ff6699;
+}
+.social-media a{
+    color: #cc0052;
 }
 .social-media a:hover{
     text-decoration: underline;
